# WebTrackerPOC

./: AuthSessionHelpers.hs  DBHelpers.hs  DBTypes.hs  Endpoints.hs  Main.hs  README.md  UUIDHelpers.hs  UnambiguiousStrings.hs  poc_project.cabal  schema.pgsql
DBTypes/: Account.hs  AuthSession.hs  Consumption.hs
Views/: Homepage.html  Success.html
