name: poc
version: 1.0.0
license: BSD3
-- license-file: LICENSE
cabal-version: >= 1.18
build-type: Simple

executable poc_scotty_server
    build-depends: base < 5
                  ,bytestring
                  ,ConfigFile
                  ,contravariant
                  ,cookie
                  ,hasql 
                  ,hasql-pool
                  ,http-types
                  ,scotty < 1
                  ,scotty-cookie
                  ,scrypt
                  ,text
                  ,time
                  ,transformers
                  ,tuple
                  ,uuid
                  ,wai-extra
    other-modules: AuthSessionHelpers
                  ,DBHelpers
                  ,DBTypes
                  ,DBTypes.Account
                  ,DBTypes.AuthSession
                  ,DBTypes.Consumption
                  ,Endpoints
                  ,UnambiguiousStrings
                  ,UUIDHelpers
    main-is: Main.hs
    default-language: Haskell2010
